--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,8 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateX(20px);}
+    to { opacity: 1; transform: translateX(0);}
+}
